--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <tr>
           <th>Delegador</th>
           <th>HP Total</th>
-          <th>Bônus</th>
+          <th>Tempo</th> <th>Bônus</th>
           <th>Histórico</th>
         </tr>
       </thead>
