--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         <p id="stat-count">0</p>
       </div>
       <div class="stat-card">
-        <h3>Destaque do Mês</h3> <p id="stat-growth">—</p>
+        <h3>Destaque do Mês</h3>
+        <p id="stat-growth">—</p>
       </div>
     </div>
 
@@ -54,8 +55,8 @@
       <thead>
         <tr>
           <th>Delegador</th>
-          <th>HP Total</th>
-          <th>Tempo (Local)</th> <th>Bônus</th>
+          <th>Delegação<br><small>Hivebr.voter</small></th> <th>HP Próprio<br><small>(Total)</small></th> <th>Tempo</th>
+          <th>Bônus</th>
           <th>Histórico</th>
         </tr>
       </thead>
