--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <th>HP Próprio<br><small>(Total)</small></th>
             <th>HBR<br><small>(Em Stake)</small></th>
             
-            <th>Curadoria<br><small>(Último | 30d)</small></th> <th>Tempo</th>
+            <th>Curadoria<br><small>(Último UTC | 30d)</small></th> <th>Tempo</th>
             <th>Bônus de<br>Delegação</th>
             <th>Bônus<br>HBR</th>
             <th>Histórico de<br>Delegação</th>
