--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hive BR • Delegator Dashboard</title>
+  <title>Hive BR Dashboard</title>
   <link rel="stylesheet" href="style.css" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script defer src="main.js"></script>
@@ -78,7 +78,6 @@
             <th class="sortable" onclick="handleSort('total_account_hp')">HP Próprio<br><small>(Total)</small> <span class="sort-icon"></span></th>
             <th class="sortable" onclick="handleSort('token_balance')">HBR<br><small>(Em Stake)</small> <span class="sort-icon"></span></th>
             <th class="sortable" onclick="handleSort('last_user_post')">Última Atividade<br><small>(Data)</small> <span class="sort-icon"></span></th>
-            
             <th class="sortable" onclick="handleSort('last_vote_date')">Última Curadoria<br><small>(Último | Votos/mês)</small> <span class="sort-icon"></span></th>
             
             <th class="sortable" onclick="handleSort('delegated_hp')">Bônus de<br>Delegação <span class="sort-icon"></span></th>
