--- a/index.html
+++ b/index.html
@@ -39,8 +39,16 @@
         <p id="stat-delegated-hp" style="color:var(--accent-purple);">0 HP</p>
       </div>
       <div class="stat-card">
-        <h3>Delegadores Ativos</h3>
+        <h3>Delegadores</h3>
         <p id="stat-count">0</p>
+      </div>
+      <div class="stat-card">
+        <h3>Votos (24h)</h3>
+        <p id="stat-votes-24h" style="color:#ffcc00;">0</p>
+      </div>
+      <div class="stat-card">
+        <h3>Votos (Mês)</h3>
+        <p id="stat-votes-month" style="color:#ffcc00;">0</p>
       </div>
       <div class="stat-card">
         <h3>Destaque do Mês</h3>
