--- a/index.html
+++ b/index.html
@@ -72,32 +72,42 @@
       </table>
     </div>
 
-    <div style="margin-top: 50px; margin-bottom: 20px;">
-        <div class="project-stats-container">
-            <div class="project-card" style="border-color: #ffcc00; background: linear-gradient(90deg, rgba(255, 204, 0, 0.1), rgba(19, 19, 31, 0.8));">
-                <div class="project-icon">
-                    <span style="font-size: 3rem;">🗳️</span>
-                </div>
-                <div class="project-info">
-                    <h3 id="lbl-votes-current">VOTOS NO MÊS ATUAL</h3>
-                    <p id="stat-votes-current" style="color: #ffcc00;">0</p>
-                </div>
+    <div class="highlight-cards-grid" style="margin-top: 50px;">
+        
+        <div class="project-card" style="border-color: #ffcc00; background: linear-gradient(90deg, rgba(255, 204, 0, 0.1), rgba(19, 19, 31, 0.8));">
+            <div class="project-icon">
+                <span style="font-size: 3rem;">🗳️</span>
+            </div>
+            <div class="project-info">
+                <h3 id="lbl-votes-current">VOTOS NO MÊS ATUAL</h3>
+                <p id="stat-votes-current" style="color: #ffcc00;">0</p>
             </div>
         </div>
 
-        <div class="stats-grid">
-            <div class="stat-card">
-                <h3>Votos (24h)</h3>
-                <p id="stat-votes-24h" style="color:#ffcc00;">0</p>
+        <div class="project-card" style="border-color: #bb86fc; background: linear-gradient(90deg, rgba(187, 134, 252, 0.1), rgba(19, 19, 31, 0.8));">
+            <div class="project-icon">
+                <span style="font-size: 3rem;">👣</span>
             </div>
-            <div class="stat-card">
-                <h3 id="lbl-votes-m1">Mês Anterior</h3>
-                <p id="stat-votes-m1" style="color:#a3a3cc;">0</p>
+            <div class="project-info">
+                <h3>TRILHA DE CURADORIA</h3>
+                <p id="stat-trail-count" style="color: #bb86fc;">0</p>
             </div>
-            <div class="stat-card">
-                <h3 id="lbl-votes-m2">2 Meses Atrás</h3>
-                <p id="stat-votes-m2" style="color:#a3a3cc;">0</p>
-            </div>
+        </div>
+
+    </div>
+
+    <div class="stats-grid" style="margin-bottom: 20px;">
+        <div class="stat-card">
+            <h3>Votos (24h)</h3>
+            <p id="stat-votes-24h" style="color:#ffcc00;">0</p>
+        </div>
+        <div class="stat-card">
+            <h3 id="lbl-votes-m1">Mês Anterior</h3>
+            <p id="stat-votes-m1" style="color:#a3a3cc;">0</p>
+        </div>
+        <div class="stat-card">
+            <h3 id="lbl-votes-m2">2 Meses Atrás</h3>
+            <p id="stat-votes-m2" style="color:#a3a3cc;">0</p>
         </div>
     </div>
 
